# jobapp

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  README.md  debug_env.py  docker-compose.yaml  pyproject.toml  start_api.sh  test_resume_generation.py  test_setup.py
alembic/: env.py
alembic/versions/: 2a4e4b8aa554_add_user_model_and_multi_tenancy_support.py  7809fc6f55f2_initial_models_job_applications_.py  7b0a910dc0b0_add_email_verification_token_field.py
api-gateway/: ARCHITECTURE.md  README.md  SETUP.md  go.mod  main.go
claude_context/: api_endpoints.md  architecture.md  current_code_structure.md  current_state.md  development_commands.md  implementation_checklist.md  next_session_template.md  quick_commands.md  quick_reference.md  session_1_summary.md  session_2_summary.md  session_3_summary.md  session_4_summary.md
docker/: .env.example  Dockerfile.api  Dockerfile.worker
docs-cli/: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  ENTERPRISE_AUDIT.md  ENTERPRISE_SUMMARY.md  README.md  README_ENTERPRISE.md  anthropic_provider.go  cache.go  components.yaml  cost_optimization.go  enterprise-config.yaml  enterprise-config.yaml.example  go.mod  go.sum  incremental.go  logger.go  main.go  model-config.yaml.example  model_config.go  model_provider.go  monitoring.go  openai_provider.go  openrouter_provider.go  resilience.go  thinking_config.go  validation.go
docs-cli/templates/: ARCHITECTURE.prompt.md  CHECKLIST.prompt.md  README.prompt.md  SETUP.prompt.md
docs/context/: ARCHITECTURE_DECISIONS.md  CONTEXT_PRESERVATION_README.md  CURRENT_STATE.md  EXECUTIVE_SUMMARY.md  HANDOFF.md  NEXT_LLM_PROMPT.md  QUICK_SESSION_END.md  README.md  RECENT_CHANGES.md  SESSION_END_PROMPT.md  SESSION_HANDOFF_TEMPLATE.md  STORAGE.md  TROUBLESHOOTING.md  generate-context.sh  quick-context.sh
docs/storage/: BACKENDS.md  README.md
examples/: llm_provider_comparison.py  resume_customization_flow.py
frontend/: next.config.ts  package-lock.json  package.json
src/agents/: __init__.py  analyzer_agent.py  base_agent.py  generator_agent.py  optimizer_agent.py  scraper_agent.py
src/api/: README.md  dependencies.py  main.py
src/core/: auth.py  config.py  config_llm_update.py  config_update.py  database.py  database.yaml  email.py  event_bus.py  events.py  kafka_client.py
src/generator/: default_customizations.py  example_data.py  llm_interface.py  (+4 more)
test-scripts/: test_all_endpoints.py  test_email_registration.py  test_latex_escaping.py  test_resume_and_events.py  test_resume_generation.py
(+64 files in other folders)
